src/objects/inscor__Account_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Engagements</relationshipLabel>
        <relationshipName>Account_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Account Engagements</relationshipLabel>
        <relationshipName>Account_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Engagements</relationshipLabel>
        <relationshipName>Account_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Followup_Actions__c</fullName>
        <label>Followup Actions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Summary__c</fullName>
        <label>Summary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trip Report</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Engagement</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Type__c</columns>
        <columns>inscor__Contact__c</columns>
        <columns>inscor__Employee__c</columns>
        <columns>inscor__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>